example-6-istio/bk_sidecar/b4enhence/ef_lifeline.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ef-lifeline-easytry
  namespace: ll
spec:
  workloadLabels:
    app: jn2
  filters:
  - listenerMatch:
      portNumber: 80
      listenerType: SIDECAR_OUTBOUND
      listenerProtocol: HTTP
    filterName: envoy.lua
    filterType: HTTP
    filterConfig:
      inlineCode: |
        function envoy_on_request(request_handle)
          request_handle:logInfo("******* enter envoy_on_request ef-lifeline")
          request_handle:headers():replace("x-hpbp-tenant-id","lifeline")
        end
